# tchemson-kala-website

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py
app/api/: deps.py  mappers.py  router.py
app/api/routes/: auth.py  media.py  messages.py  sections.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/services/: seed.py
docker/: nginx.conf  nginx.render.conf.template  start-render.sh
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts  manifest.webmanifest  service-worker.js  styles.css
frontend/src/app/: app.component.html  app.component.ts
frontend/src/app/core/: api.service.ts  i18n.service.ts  models.ts  translate.pipe.ts
frontend/src/app/features/admin/: admin.component.html  admin.component.ts
frontend/src/app/features/home/: home.component.html  home.component.ts
frontend/src/app/shared/components/confirm-dialog/: confirm-dialog.component.html  confirm-dialog.component.ts
frontend/src/app/shared/components/interactive-help/: interactive-help.component.html  interactive-help.component.ts
frontend/src/app/shared/directives/: scroll-reveal.directive.ts
frontend/src/app/shared/sections/content-section/: content-section.component.html  content-section.component.ts
frontend/src/app/shared/sections/hero-section/: hero-section.component.html  hero-section.component.ts
